fix: :bug: remove `extra padding` from `datetime input` on `safari browser`

--- a/styles/form/fields/input.css
+++ b/styles/form/fields/input.css
@@ -8,7 +8,7 @@ label {
 input,
 textarea,
 select {
-  display: block;
+  height: 48px;
   width: 100%;
   padding: 13px 16px;
   border-radius: 8px;
